--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,15 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+/* хедер */
+.header-navigation{
+  display: flex;
+}
+.header-list{
+  display: flex;
+  margin-left: auto ;
+  gap: 10px;
+}
 .header-logo {
   font-family: "Bilbo Swash Caps";
   font-weight: 400;
@@ -30,7 +39,13 @@ body {
 }
 
 /* секція сервіси */
-
+.services-list{
+  display: flex;
+  gap: 56px;
+}
+.services-item{
+  outline: solid green;
+}
 .services-title {
   font-weight: 700;
   font-size: 40px;
@@ -39,6 +54,7 @@ body {
   letter-spacing: -1px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 88px;
 }
 
 .services-name {
@@ -69,6 +85,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
+  margin-bottom: 114px;
 }
 
 .contacts-button {
@@ -102,4 +119,23 @@ body {
   letter-spacing: -0.35px;
   text-transform: uppercase;
   color: #bbbbbb;
+}
+
+section {
+  outline: solid green;
+}
+
+
+.services {
+  padding-top: 109px;
+  padding-bottom: 119px;
+}
+
+.contact {
+  padding-top: 92px;
+  padding-bottom: 115px;
+}
+
+.header-page {
+  padding-top: 44px;
 }
