--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,12 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   background: #fed136;
+  width: 242px;
+  height: 68px;
+  margin-top: 29px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .contact {
@@ -139,3 +145,55 @@ section {
 .header-page {
   padding-top: 44px;
 }
+
+
+.contacts-flex{
+  display: flex;
+  outline: auto;
+  gap: 28px;
+  justify-content: center;
+}
+
+.contacts-list{
+  display: flex;
+  gap: 28px;
+  flex-direction: column;
+  width: 455px;
+  height: 50px;
+}
+
+.input{
+  width: 455px;
+  height: 50px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  padding-left: 20px;
+  background: #FFFFFF;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
+}
+
+.textarea{
+  width: 458px;
+  height: 212px; 
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  padding-left: 22px;
+  padding-top: 14px;
+  background: #FFFFFF;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
+}
+
+
+
+
+
+
+
