--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   background: #fed136;
   width: 242px;
   height: 68px;
-  margin-top: 29px;
+  margin-top: 27px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -127,7 +127,7 @@ body {
   color: #bbbbbb;
 }
 
-section {
+.section {
   outline: solid green;
 }
 
@@ -146,54 +146,37 @@ section {
   padding-top: 44px;
 }
 
-
-.contacts-flex{
+.contacts-flex {
   display: flex;
-  outline: auto;
-  gap: 28px;
+  gap: 27px;
   justify-content: center;
 }
 
-.contacts-list{
+.contact-list{
   display: flex;
-  gap: 28px;
   flex-direction: column;
-  width: 455px;
-  height: 50px;
+  gap: 28px;
 }
 
-.input{
+.contacts-input{
   width: 455px;
   height: 50px;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
   padding-left: 20px;
   background: #FFFFFF;
   border: 1px solid #CCCCCC;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 
-.textarea{
+.contacts-coment{
   width: 458px;
-  height: 212px; 
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
+  height: 212px;
   padding-left: 22px;
   padding-top: 14px;
   background: #FFFFFF;
   border: 1px solid #CCCCCC;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 
-
-
-
-
-
-
+.contacts-button{
+  
+}
